--- a/styles/dog-styles.css
+++ b/styles/dog-styles.css
@@ -28,7 +28,7 @@ body {
 }
 .details-image {
     width: 60vw;
-    height: 30vw
+    height: 55vw
 }
 .details-container {
     position: relative;
@@ -56,47 +56,38 @@ body {
     color: ghostwhite;
     font-size: 2rem;
     text-align: center;
-    text-transform: uppercase;
-    margin: 0;
+   text-transform: uppercase;
 }
 body, html {
     height: 100%
 }
-.footer-title {
-    text-align: center;
-}
 @media (min-width: 568px){  
-.main-content {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-}
-.thumbnails-list {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    max-height: 50vh;
-    margin: 0;
-}
-.thumbnails-image {
-    width: 14vw;
-    height: 11vw;
-    border-radius: 20px 20px 0 0;
-}
-.thumbnails-item {    
-    border-radius: 20px;
-}
-.thumbnails-title {
-    border-radius: 0 0 25px 25px;
-}
-    /* .thumbnails-list {
+    .logo-title {
+        margin: 0;
+    }
+    .main-content {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+    }
+    .details-image {
+        height: 30vw;
+    }
+    .thumbnails-list {
         flex-direction: column;
         flex-wrap: nowrap;
-        order: -1;
+        max-height: 50vh;
+        margin: 0;
+    }
+    .thumbnails-image {
+        width: 14vw;
+        height: 11vw;
+        border-radius: 20px 20px 0 0;
+    }
+    .thumbnails-item {    
+        border-radius: 20px;
     }
     .thumbnails-title {
-        width: 20vw;
+        border-radius: 0 0 25px 25px;
     }
-    .thumbnails-item {
-        max-width: 20vw;
-    } */
 }
