--- a/styles/dog-styles.css
+++ b/styles/dog-styles.css
@@ -1,14 +1,31 @@
+@font-face {
+    font-family: lakeshor;
+    src: url("fonts/LAKESHOR-webfont.svg");
+    src: url("fonts/LAKESHOR-webfont.woff");
+}
+@font-face {
+    font-family: airstream;
+    src: url("fonts/Airstream-webfont.svg");
+    src: url("fonts/Airstream-webfont.woff");
+}
+:root {
+    --thumbnails-image-width: 20vw;
+    --thumbnails-image-height: 18vw;
+    --thumbnails-title-height: calc(var(--thumbnails-image-height) * 0.33);
+}
 body {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: 0;
+    background-color: #3a5067;
     /* align-items: center; */
 }
 .thumbnails-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    max-height: 25vh;
+    max-height: 32vh;
     overflow-y: auto;
     justify-content: space-around;
     list-style: none;
@@ -16,19 +33,22 @@ body {
     padding-top: 2.5vh;
 }
 .thumbnails-image {
-    width: 20vw;
-    height: 18vw;
-    display:block
+    width: var(--thumbnails-image-width);
+    height: var(--thumbnails-image-height);
+    display:block;
 }
 .details-title {
-    background-color: cornsilk;
+    background-color: #fe7f54;
     position: absolute;
-    left: 3vw;
-    bottom: 2vw
+    left: 11vw;
+    bottom: 2vw;
+    font-family: airstream;
+    font-style: italic;
 }
 .details-image {
-    width: 60vw;
-    height: 55vw
+    width: 70vw;
+    height: 60vw;
+    border-radius: 25%;
 }
 .details-container {
     position: relative;
@@ -42,52 +62,112 @@ body {
     background-color: beige;
     color: blue;
     font-size: 1.2rem;
+    width: var(--thumbnails-image-width);
+    height: var(--thumbnails-title-height);
 }
 .thumbnails-item {
     margin-top: 2vh;
     margin-left: 2vw;
-    border: 1px solid blue;
+    border: 1px solid #fff;
+    max-width: var(--thumbnails-image-width);
+    min-height: calc(var(--thumbnails-image-height) + var(--thumbnails-title-height));
+    border-radius: 25%;
+    overflow: hidden;
 }
 .thumbnails-anchor {
     text-decoration: none;
 }
 .logo-title {
-    background-color: fuchsia;
-    color: ghostwhite;
+    background-color: #7caad1;
+    color: #25446a;
     font-size: 2rem;
     text-align: center;
-   text-transform: uppercase;
+    text-transform: uppercase;
+    margin: 0;
+    font-family: lakeshor;
 }
 body, html {
-    height: 100%
+    height: 100%;
 }
-@media (min-width: 568px){  
-    .logo-title {
-        margin: 0;
-    }
-    .main-content {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-around;
-    }
-    .details-image {
-        height: 30vw;
+.footer-title {
+    text-align: center;
+    background-color: #7caad1;
+}
+footer a {
+    color: #000;
+}
+@media (min-width: 568px){
+    :root {
+        --thumbnails-image-width: 12vw;
+        --thumbnails-image-height: 10vw;
+        --thumbnails-title-height: calc(var(--thumbnails-image-height) * 0.25);
     }
     .thumbnails-list {
         flex-direction: column;
         flex-wrap: nowrap;
-        max-height: 50vh;
+        order: -1;
+        max-height: 70vh;
+        justify-content: flex-start;
+        padding: 0;
+        margin: 0;       
+    }
+    .thumbnails-title {        
+        font-size: 1rem;        
+    }
+    .thumbnails-item {      
+        margin-left:0;       
+        overflow:hidden;       
+        margin-top:0;
+    }
+    .thumbnails-item+.thumbnails-item {
+        margin-top: 2vh;
+    }    
+    .details-image {
+        width: 60vw;
+        height: 43vw;
+    }
+    .details-title {
+        left: -4vw;
+        bottom: 2vw;        
+    }
+    .main-content {
+        display: flex;
+         justify-content: space-around;        
+    }
+    .details-container {
+        justify-content: center;        
+    }
+    body {       
+        justify-content: space-between;
         margin: 0;
     }
-    .thumbnails-image {
-        width: 14vw;
-        height: 11vw;
-        border-radius: 20px 20px 0 0;
+    .logo-title {
+        margin: 0;
+        font-size: 1.5rem;        
     }
-    .thumbnails-item {    
-        border-radius: 20px;
+}
+@media (min-width: 900px){
+    :root {
+        --thumbnails-image-width: 14vw;
+        --thumbnails-image-height: 10vw;
+        --thumbnails-title-height: calc(var(--thumbnails-image-height) * 0.23);
+    }
+    .logo-title {
+        font-size: 2.5rem;        
+    }
+    .thumbnails-list {
+        max-height: 75vh;
+    }
+    .details-image {
+        width: 71vw;
+        height: 54vw;
     }
     .thumbnails-title {
-        border-radius: 0 0 25px 25px;
+        font-size: 1.2rem;
+    }
+    .details-title {
+        left: 0vw;
+        bottom: 4vw;
+        font-size: 1.6rem;
     }
 }
