--- a/styles/dog-styles.css
+++ b/styles/dog-styles.css
@@ -71,8 +71,8 @@ body {
     padding-top: 2.5vh;
 }
 .hidden .thumbnails-list {
-    flex-direction: column;
-    flex-wrap: nowrap;
+    flex-direction: row;
+    flex-wrap: wrap;
     max-height: 80vh;
     align-items: center;
     justify-content: flex-start;
@@ -90,6 +90,7 @@ body {
 .hidden .thumbnails-item {
     max-width: 45vw;
     min-height: 24vh;
+    margin: 2%;
 }
 .selected.thumbnails-item {
     border-radius: 3%;
@@ -198,12 +199,15 @@ footer a {
         height: 28vh;
     }
     .thumbnails-title {        
-        font-size: 1rem;        
+        font-size: 0.9rem;        
     } 
     .hidden .thumbnails-title {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         width: 23vw;
         height: 7vh;
+    }
+    .selected .thumbnails-title {
+        line-height: 1.3rem;
     }
 }
 @media (min-width: 900px){
