--- a/styles/dog-styles.css
+++ b/styles/dog-styles.css
@@ -37,6 +37,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: 3s cubic-bezier(0.3, 0.5, 0.7, 1.4);
 }
 .hidden .details-container {
     display: none;
@@ -132,6 +133,10 @@ body {
 }
 footer a {
     color: #000;
+}
+.is-tiny {
+    transform: scale(0.001);
+    transition: 2s;
 }
 @media (min-width: 568px){
     :root {
